fix tmux conf on ec2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,7 +72,7 @@ set-option -sg escape-time 10
 #history
 set -g history-limit 10000
 
-bind \\ split-window -h -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind m movew -r \; display "Moved!"
@@ -82,7 +82,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
