--- a/environment_ec2.yaml
+++ b/environment_ec2.yaml
@@ -8,51 +8,107 @@ dependencies:
   - asn1crypto=1.2.0=py37_0
   - astroid=2.3.3=py37_0
   - attrs=19.3.0=py_0
+  - autopep8=1.4.4=py_0
   - black=19.3b0=py_0
+  - blas=1.0=mkl
+  - bokeh=1.4.0=py37_0
   - boto=2.49.0=py37_0
-  - boto3=1.10.19=py_0
-  - botocore=1.13.19=py_0
+  - boto3=1.10.39=py_0
+  - botocore=1.13.39=py_0
   - ca-certificates=2019.11.27=0
   - certifi=2019.11.28=py37_0
   - cffi=1.13.2=py37h2e261b9_0
   - click=7.0=py37_0
+  - cloudpickle=1.2.2=py_0
   - cpplint=1.4.4=py_0
   - cryptography=2.8=py37h1ba5d50_0
+  - cytoolz=0.10.1=py37h7b6447c_0
+  - dask=2.9.0=py_0
+  - dask-core=2.9.0=py_0
+  - distributed=2.9.0=py_0
   - docutils=0.15.2=py37_0
+  - entrypoints=0.3=py37_0
+  - flake8=3.7.9=py37_0
+  - freetype=2.9.1=h8a8886c_1
+  - fsspec=0.6.2=py_0
+  - future=0.18.2=py37_0
   - greenlet=0.4.15=py37h7b6447c_0
+  - heapdict=1.0.1=py_0
   - idna=2.8=py37_0
+  - importlib_metadata=1.3.0=py37_0
+  - intel-openmp=2019.4=243
   - isort=4.3.21=py37_0
+  - jedi=0.15.1=py37_0
+  - jinja2=2.10.3=py_0
   - jmespath=0.9.4=py_0
+  - jpeg=9b=h024ee3a_2
   - lazy-object-proxy=1.4.3=py37h7b6447c_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_0
+  - locket=0.2.0=py37_1
+  - markupsafe=1.1.1=py37h7b6447c_0
   - mccabe=0.6.1=py37_1
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py37he904b0f_0
+  - mkl_fft=1.0.15=py37ha843d7b_0
+  - mkl_random=1.1.0=py37hd6b4f25_0
+  - more-itertools=8.0.2=py_0
   - msgpack-python=0.6.1=py37hfd86e86_1
   - ncurses=6.1=he6710b0_1
   - neovim=0.3.1=py37_0
+  - numpy-base=1.17.4=py37hde5b4d6_0
+  - olefile=0.46=py37_0
   - openssl=1.1.1d=h7b6447c_3
+  - packaging=19.2=py_0
+  - pandas=0.25.3=py37he6710b0_0
+  - parso=0.5.2=py_0
+  - partd=1.1.0=py_0
+  - pillow=6.2.1=py37h34e0f95_0
   - pip=19.3.1=py37_0
+  - pluggy=0.13.1=py37_0
+  - psutil=5.6.7=py37h7b6447c_0
+  - pycodestyle=2.5.0=py37_0
   - pycparser=2.19=py37_0
+  - pydocstyle=4.0.1=py_0
+  - pyflakes=2.1.1=py37_0
   - pylint=2.4.4=py37_0
   - pynvim=0.3.2=py37_0
   - pyopenssl=19.1.0=py37_0
+  - pyparsing=2.4.5=py_0
   - pysocks=1.7.1=py37_0
   - python=3.7.5=h0371630_0
-  - pyyaml=5.1.2=py37h7b6447c_0
+  - python-jsonrpc-server=0.3.2=py_0
+  - python-language-server=0.31.2=py37_0
+  - pytz=2019.3=py_0
+  - pyyaml=5.2=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
+  - rope=0.14.0=py_0
   - s3transfer=0.2.1=py37_0
   - setuptools=42.0.2=py37_0
   - six=1.13.0=py37_0
+  - snowballstemmer=2.0.0=py_0
+  - sortedcontainers=2.1.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
+  - tblib=1.6.0=py_0
   - tk=8.6.8=hbc83047_0
   - toml=0.10.0=py37h28b3542_0
+  - toolz=0.10.0=py_0
+  - tornado=6.0.3=py37h7b6447c_0
+  - ujson=1.35=py37h14c3975_0
   - wheel=0.33.6=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
+  - yapf=0.28.0=py_0
+  - zict=1.0.0=py_0
+  - zipp=0.6.0=py_0
   - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
   - pip:
     - alpaca-trade-api==0.41
     - argcomplete==1.10.2
@@ -60,10 +116,8 @@ dependencies:
     - chardet==3.0.4
     - distro==1.4.0
     - numpy==1.17.4
-    - pandas==0.25.3
     - pipx==0.14.0.0
     - python-dateutil==2.8.1
-    - pytz==2019.3
     - requests==2.22.0
     - urllib3==1.24.3
     - userpath==1.3.0
