--- a/environment_apollo.yaml
+++ b/environment_apollo.yaml
@@ -5,52 +5,65 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - appdirs=1.4.3=py37h28b3542_0
-  - asn1crypto=1.2.0=py37_0
+  - asn1crypto=1.3.0=py37_0
   - astroid=2.3.3=py37_0
   - attrs=19.3.0=py_0
   - black=19.3b0=py_0
+  - blas=1.0=mkl
   - ca-certificates=2019.11.27=0
   - certifi=2019.11.28=py37_0
   - cffi=1.13.2=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
   - click=7.0=py37_0
-  - conda=4.8.0=py37_1
+  - conda=4.8.1=py37_0
   - conda-package-handling=1.6.0=py37h7b6447c_0
   - cpplint=1.4.4=py_0
   - cryptography=2.8=py37h1ba5d50_0
   - greenlet=0.4.15=py37h7b6447c_0
   - idna=2.8=py37_0
+  - intel-openmp=2019.4=243
   - isort=4.3.21=py37_0
-  - jedi=0.15.1=py37_0
+  - jedi=0.15.2=py37_0
   - lazy-object-proxy=1.4.3=py37h7b6447c_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - mccabe=0.6.1=py37_1
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py37he904b0f_0
+  - mkl_fft=1.0.15=py37ha843d7b_0
+  - mkl_random=1.1.0=py37hd6b4f25_0
   - msgpack-python=0.6.1=py37hfd86e86_1
   - ncurses=6.1=he6710b0_1
   - neovim=0.3.1=py37_0
+  - numpy=1.18.1=py37h4f9e942_0
+  - numpy-base=1.18.1=py37hde5b4d6_1
   - openssl=1.1.1d=h7b6447c_3
+  - pandas=0.25.3=py37he6710b0_0
   - parso=0.5.2=py_0
   - pip=19.3.1=py37_0
-  - pycosat=0.6.3=py37h14c3975_0
+  - pycosat=0.6.3=py37h7b6447c_0
   - pycparser=2.19=py37_0
   - pylint=2.4.4=py37_0
   - pynvim=0.3.2=py37_0
   - pyopenssl=19.1.0=py37_0
   - pysocks=1.7.1=py37_0
-  - python=3.7.5=h0371630_0
+  - python=3.7.6=h0371630_2
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
   - pyyaml=5.2=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
   - requests=2.22.0=py37_1
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - setuptools=42.0.2=py37_0
+  - ruamel_yaml=0.15.87=py37h7b6447c_0
+  - setuptools=44.0.0=py37_0
   - six=1.13.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - toml=0.10.0=py37h28b3542_0
-  - tqdm=4.40.2=py_0
+  - tqdm=4.41.1=py_0
   - urllib3=1.25.7=py37_0
   - wheel=0.33.6=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
