kinit loop, remove unnecessary mwinits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,7 +67,7 @@ set-option -g default-terminal screen-256color-bce-s
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 #escape time
-set-option -sg escape-time 10
+#set-option -sg escape-time 60
 
 #history
 set -g history-limit 10000
