--- a/environment_apollo.yaml
+++ b/environment_apollo.yaml
@@ -8,7 +8,7 @@ dependencies:
   - asn1crypto=1.3.0=py37_0
   - astroid=2.3.3=py37_0
   - attrs=19.3.0=py_0
-  - black=19.3b0=py_0
+  - black=19.10b0=py_0
   - blas=1.0=mkl
   - ca-certificates=2020.1.1=0
   - certifi=2019.11.28=py37_0
@@ -37,13 +37,15 @@ dependencies:
   - mkl_fft=1.0.15=py37ha843d7b_0
   - mkl_random=1.1.0=py37hd6b4f25_0
   - msgpack-python=0.6.1=py37hfd86e86_1
-  - ncurses=6.1=he6710b0_1
+  - mypy_extensions=0.4.3=py37_0
+  - ncurses=6.2=he6710b0_0
   - neovim=0.3.1=py37_0
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
   - openssl=1.1.1d=h7b6447c_4
   - pandas=1.0.1=py37h0573a6f_0
   - parso=0.6.1=py_0
+  - pathspec=0.7.0=py_0
   - pip=20.0.2=py37_1
   - pycosat=0.6.3=py37h7b6447c_0
   - pycparser=2.19=py37_0
@@ -56,6 +58,7 @@ dependencies:
   - pytz=2019.3=py_0
   - pyyaml=5.3=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
+  - regex=2020.1.8=py37h7b6447c_0
   - requests=2.22.0=py37_1
   - ruamel_yaml=0.15.87=py37h7b6447c_0
   - setuptools=45.2.0=py37_0
@@ -64,6 +67,8 @@ dependencies:
   - tk=8.6.8=hbc83047_0
   - toml=0.10.0=py37h28b3542_0
   - tqdm=4.42.1=py_0
+  - typed-ast=1.4.1=py37h7b6447c_0
+  - typing_extensions=3.7.4.1=py37_0
   - urllib3=1.25.8=py37_0
   - wheel=0.34.2=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
