--- a/environment_apollo.yaml
+++ b/environment_apollo.yaml
@@ -11,19 +11,19 @@ dependencies:
   - black=19.10b0=py_0
   - blas=1.0=mkl
   - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_0
+  - certifi=2020.4.5.1=py37_0
   - cffi=1.14.0=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
-  - click=7.0=py37_0
-  - conda=4.8.2=py37_0
+  - click=7.1.1=py_0
+  - conda=4.8.3=py37_0
   - conda-package-handling=1.6.0=py37h7b6447c_0
   - cpplint=1.4.4=py_0
   - cryptography=2.8=py37h1ba5d50_0
   - greenlet=0.4.15=py37h7b6447c_0
-  - idna=2.8=py37_0
+  - idna=2.9=py_1
   - intel-openmp=2020.0=166
   - isort=4.3.21=py37_0
-  - jedi=0.16.0=py37_0
+  - jedi=0.16.0=py37_1
   - lazy-object-proxy=1.4.3=py37h7b6447c_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
@@ -36,42 +36,42 @@ dependencies:
   - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.15=py37ha843d7b_0
   - mkl_random=1.1.0=py37hd6b4f25_0
-  - msgpack-python=0.6.1=py37hfd86e86_1
+  - msgpack-python=1.0.0=py37hfd86e86_1
   - mypy_extensions=0.4.3=py37_0
   - ncurses=6.2=he6710b0_0
   - neovim=0.3.1=py37_0
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
-  - openssl=1.1.1d=h7b6447c_4
-  - pandas=1.0.1=py37h0573a6f_0
-  - parso=0.6.1=py_0
+  - openssl=1.1.1f=h7b6447c_0
+  - pandas=1.0.3=py37h0573a6f_0
+  - parso=0.6.2=py_0
   - pathspec=0.7.0=py_0
   - pip=20.0.2=py37_1
   - pycosat=0.6.3=py37h7b6447c_0
-  - pycparser=2.19=py37_0
+  - pycparser=2.20=py_0
   - pylint=2.4.4=py37_0
   - pynvim=0.3.2=py37_0
   - pyopenssl=19.1.0=py37_0
   - pysocks=1.7.1=py37_0
-  - python=3.7.6=h0371630_2
+  - python=3.7.7=hcf32534_0_cpython
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
-  - pyyaml=5.3=py37h7b6447c_0
-  - readline=7.0=h7b6447c_5
-  - regex=2020.1.8=py37h7b6447c_0
-  - requests=2.22.0=py37_1
+  - pyyaml=5.3.1=py37h7b6447c_0
+  - readline=8.0=h7b6447c_0
+  - regex=2020.4.4=py37h7b6447c_0
+  - requests=2.23.0=py37_0
   - ruamel_yaml=0.15.87=py37h7b6447c_0
-  - setuptools=45.2.0=py37_0
+  - setuptools=46.1.3=py37_0
   - six=1.14.0=py37_0
   - sqlite=3.31.1=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - toml=0.10.0=py37h28b3542_0
-  - tqdm=4.42.1=py_0
+  - tqdm=4.44.1=py_0
   - typed-ast=1.4.1=py37h7b6447c_0
   - typing_extensions=3.7.4.1=py37_0
   - urllib3=1.25.8=py37_0
   - wheel=0.34.2=py37_0
-  - wrapt=1.11.2=py37h7b6447c_0
+  - wrapt=1.12.1=py37h7b6447c_1
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
