switch tmux to symlink

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,104 +1,1 @@
-# COLORSCHEME: solarized light
-
-BACKGROUND=colour230
-BASE00=colour241 #foreground
-BASE01=colour240
-BASE02=colour235
-BASE03=colour234
-BASE0=colour244
-BASE1=colour245
-BASE2=colour254
-BASE3=colour230
-RED=colour160
-GREEN=colour64
-YELLOW=colour136
-BLUE=colour33
-
-set-option -g status "on"
-
-# default statusbar colors
-set-option -g status-bg $BASE2
-set-option -g status-fg $BASE00
-
-set-window-option -g mode-keys vi
-
-# default window title colors
-set-window-option -g window-status-style bg=$BASE01,fg=$BACKGROUND
-
-set-window-option -g window-status-activity-style bg=$BACKGROUND,fg=$BASE00
-
-set-window-option -g window-status-current-style bg=$BASE1,fg=$BASE2
-
-# pane border
-set-option -g pane-active-border-style fg=$BASE00
-set-option -g pane-border-style fg=$BASE00
-
-# message infos
-set-option -g message-style bg=$BACKGROUND,fg=$BASE00 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=$BACKGROUND,fg=$BASE00 # bg=fg3, fg=bg1
-
-# pane number display
-set-option -g display-panes-active-colour $BASE00
-set-option -g display-panes-colour $BACKGROUND
-
-# clock
-set-window-option -g clock-mode-colour $BLUE #blue
-
-# bell
-set-window-option -g window-status-bell-style fg=$BASE00,bg=$RED #bg, red
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "0"
-set-window-option -g window-status-separator ""
-
-set-option -g status-left "#[fg=$BASE2, bg=$BASE00] #S #[fg=$BASE00, bg=$BASE2, nobold, noitalics, nounderscore]"
-set-option -g status-right ""
-
-set-window-option -g window-status-current-format "#[fg=$BASE3, bg=$BASE2, :nobold, noitalics, nounderscore]#[fg=$BASE2, bg=$BASE1] #I #[fg=$BASE2, bg=$BASE1, bold] #W #[fg=$BASE1, bg=$BASE2, nobold, noitalics, nounderscore]"
-set-window-option -g window-status-format "#[fg=$BASE2,bg=$BASE02,noitalics]#[fg=$BASE2,bg=$BASE02] #I #[fg=$BASE2, bg=$BASE03] #W #[fg=$BASE02, bg=$BASE2, noitalics]"
-
-#shell
-if-shell -b '[ `hostname` = "batcave" ]' \
-	"set-option -g default-command /bin/zsh"
-#set -g terminal-overrides ',xterm-256color:Tc'
-#set-option -g default-terminal screen-256color-bce-s
-#set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-
-#escape time
-#set-option -sg escape-time 60
-
-#history
-set -g history-limit 10000
-
-bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind m movew -r \; display "Moved!"
-
-# smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
-set -g @plugin 'christoomey/vim-tmux-navigator'
-run '~/.tmux/plugins/tpm/tpm'
+.tmux_linux.conf
