--- a/.tmux_linux.conf
+++ b/.tmux_linux.conf
@@ -63,9 +63,7 @@ set-option -g status-right ""
 set-window-option -g window-status-current-format "#[fg=$BASE3, bg=$BASE2, :nobold, noitalics, nounderscore]#[fg=$BASE2, bg=$BASE1] #I #[fg=$BASE2, bg=$BASE1, bold] #W #[fg=$BASE1, bg=$BASE2, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=$BASE2,bg=$BASE02,noitalics]#[fg=$BASE2,bg=$BASE02] #I #[fg=$BASE2, bg=$BASE03] #W #[fg=$BASE02, bg=$BASE2, noitalics]"
 
-#shell
-if-shell -b '[ `hostname` = "batcave" ]' \
-	"set-option -g default-command /bin/zsh"
+set-option -g default-command $SHELL
 #set -g terminal-overrides ',xterm-256color:Tc'
 #set-option -g default-terminal screen-256color-bce-s
 #set -as terminal-overrides ',xterm*:sitm=\E[3m'
