Add tpm startup

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,4 @@
-Include /home/velchug/.ssh/bastions-config
+Include /home/velchug/.ssh/apollo-config
 Host *
     UserKnownHostsFile /dev/null
     ForwardAgent yes
