--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = git@gitlab.com:gvelchuru/nvim.git
+[submodule ".icons/la-capitaine-icon-theme"]
+	path = .icons/la-capitaine-icon-theme
+	url = https://github.com/keeferrourke/la-capitaine-icon-theme.git
