--- a/environment_mac.yaml
+++ b/environment_mac.yaml
@@ -3,25 +3,63 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2020.6.24=0
-  - certifi=2020.6.20=py38_0
-  - greenlet=0.4.16=py38haf1e3a3_0
+  - appdirs=1.4.4=py_0
+  - attrs=20.3.0=pyhd3eb1b0_0
+  - black=19.10b0=py_0
+  - blas=1.0=mkl
+  - ca-certificates=2021.1.19=hecd8cb5_0
+  - certifi=2020.12.5=py38hecd8cb5_0
+  - click=7.1.2=pyhd3eb1b0_0
+  - greenlet=0.4.17=py38haf1e3a3_0
+  - intel-openmp=2019.4=233
+  - isort=5.6.4=py_0
   - libcxx=10.0.0=1
   - libedit=3.1.20191231=h1de35cc_1
   - libffi=3.3=hb1e8313_2
-  - msgpack-python=1.0.0=py38h04f5b5a_1
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py38h9ed2024_0
+  - mkl_fft=1.2.0=py38hc64f4ea_0
+  - mkl_random=1.1.1=py38h959d312_0
+  - msgpack-python=1.0.1=py38hf7b0b51_0
+  - mypy_extensions=0.4.3=py38_0
   - ncurses=6.2=h0a44026_1
   - neovim=0.3.1=py38h32f6830_1
-  - openssl=1.1.1g=h1de35cc_0
-  - pip=20.2.2=py38_0
+  - numpy=1.19.2=py38h456fd55_0
+  - numpy-base=1.19.2=py38hcfb5961_0
+  - openssl=1.1.1i=h9ed2024_0
+  - pandas=1.2.1=py38hb2f4e1b_0
+  - pathspec=0.7.0=py_0
+  - pip=20.3.3=py38hecd8cb5_0
   - pynvim=0.4.1=py38h32f6830_1
-  - python=3.8.5=h26836e1_0
+  - python=3.8.5=h26836e1_1
+  - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
+  - pytz=2020.5=pyhd3eb1b0_0
   - readline=8.0=h1de35cc_0
-  - setuptools=49.6.0=py38_0
-  - sqlite=3.32.3=hffcf06c_0
+  - regex=2020.11.13=py38h9ed2024_0
+  - setuptools=51.3.3=py38hecd8cb5_4
+  - six=1.15.0=py38hecd8cb5_0
+  - sqlite=3.33.0=hffcf06c_0
   - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.34.2=py38_0
+  - toml=0.10.1=py_0
+  - typed-ast=1.4.2=py38h9ed2024_1
+  - typing_extensions=3.7.4.3=py_0
+  - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h1de35cc_3
+  - pip:
+    - aiohttp==3.6.3
+    - async-timeout==3.0.1
+    - chardet==3.0.4
+    - discord-py==1.5.1
+    - idna==2.10
+    - multidict==4.7.6
+    - praw==7.1.0
+    - prawcore==1.5.0
+    - python-dotenv==0.15.0
+    - requests==2.25.1
+    - update-checker==0.18.0
+    - urllib3==1.26.2
+    - websocket-client==0.57.0
+    - yarl==1.5.1
 prefix: /usr/local/Caskroom/miniconda/base/envs/dev
